# pgfast

./: .gitignore  BEFORE_RELEASE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
examples/todo-api/: README.md  app.py
examples/todo-api/db/fixtures/: 20250101000000_create_users_fixture.sql  20250102000000_create_todos_fixture.sql
examples/todo-api/db/migrations/: 20250101000000_create_users_down.sql  20250101000000_create_users_up.sql  20250102000000_create_todos_down.sql  20250102000000_create_todos_up.sql
examples/todo-api/tests/: conftest.py  test_api.py  test_todos.py
src/pgfast/: __init__.py  cli.py  config.py  exceptions.py  fastapi.py  migrations.py  pytest.py  schema.py  testing.py
tests/: conftest.py
tests/integration/: test_connection.py  test_fastapi_integration.py  test_fixtures.py  test_migrations.py  test_schema.py
tests/unit/: test_cli.py  test_config.py  test_exceptions.py  test_migration_model.py
